Fix map overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   box-sizing: border-box;
 }
 
+.app {
+  height: 100vh;
+  width: 100vw;
+}
+
+.map {
+  height: calc(100vh - 48px);
+  overflow: hidden;
+}
+
 .nav {
   background-color: #282c34;
   color: #fff;
